# chattes

./: .gitignore  LICENSE  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: flutter.yml
android/app/: build.gradle.kts
backend/: Cargo.toml
backend/src/app/: app.rs  chats.rs  dto.rs  error.rs  messages.rs
backend/src/domain/: model.rs
backend/src/infra/: attachment_store.rs  chat_store.rs  error.rs
frontend/: flutter_rust_bridge.yaml  pubspec.yaml
frontend/ios/Runner/: Info.plist
frontend/lib/: main.dart
frontend/lib/data/: frb_generated.dart  frb_generated.io.dart
frontend/lib/ui/: widget_tree.dart
frontend/rust_builder/android/: build.gradle
frontend/rust_builder/ios/: rust_lib_chattes.podspec
frontend/rust_builder/linux/: CMakeLists.txt
frontend/rust_builder/macos/: rust_lib_chattes.podspec
frontend/rust_builder/windows/: CMakeLists.txt
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: frb_generated.dart  frb_generated.web.dart
lib/data/app/: app.dart  chats.dart  dto.dart  (+1 more)
lib/ui/: widget_tree.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/src/: app.rs  frb_generated.rs  infra.rs  lib.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_chattes.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_chattes.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+77 files in other folders)
