[package]
name = "rust_lib_chattes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
tempfile = "3.27.0"
#ulid = { version = "1.2.1", features = ["serde"] }
dirs = "6.0.0"
yaml_serde = "0.10.4"
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono"] }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
dashmap = "6.2.1"
ferroid = { version = "2.0.0", features = ["snowflake", "serde", "base32", "atomic", "all"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3
overflow-checks = false
